--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
