--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.11.0",
     "next": "15.3.2",
